# kors_async

async/: async.cmake  async.h  asyncable.h  channel.h  conf.h  notification.h  notifylist.h  processevents.h  promise.h
async/internal/: abstractinvoker.h  asyncimpl.cpp  asyncimpl.h  channelimpl.h  conf.cpp  objectpool.h  queuedinvoker.cpp  queuepool.cpp  queuepool.h  ringqueue.h  rpcqueue.h
example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  async_tests.cpp  channel_tests.cpp  promise_tests.cpp  ringqueue_tests.cpp  rpcqueue_tests.cpp
